<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodaysWords" >

    <SlidingDrawer
        android:id="@+id/slidingDrawer1"     
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:content="@+id/content"
        android:handle="@+id/handle"
        android:visibility="invisible"
        android:topOffset="320dp" > <!-- prevents handle from opening all the way to the top -->

        <ImageView
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/handle_drawable"
            android:src="@drawable/tray_handle_normal"
            android:visibility="gone" />
        <Button
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/button_text"
            android:onClick="startTest" />
        
    </SlidingDrawer>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text1"
        android:text="@string/TextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/source1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/word1"
        android:text="@string/source"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/definition1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/source1" />
  
</RelativeLayout>